tests/type-errors/no_assignment_of_shadow_var_in_prog_effect.arl
archetype no_assignment_of_shadow_var_in_prog_effect

entry exec () {
  effect {
    myvar += 2
  }
}

specification {
  variable myvar : int = 1
}
